# osdu-python-client

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  download.py  fix_openapi_json_response_media_types.py  generate_all.py  pyproject.toml  release-please-config.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build.yml  code-scanning.yml  lint-pr.yml  release.yml
openapi_specs/: CRS_Catalog.json  CRS_Conversion.json  Dataset.json  Entitlements.json  File.json  Indexer.json  Ingestion_Workflow_Service.json  Legal.json  Motivation.md  Notification.json  Partition.json  Policy.json  Register.json  Schema.json  Search.json  Storage.json  Unit.json  Wellbore_ddms.json
src/osdu_python_client/crs_catalog/: __init__.py
src/osdu_python_client/crs_catalog/models/: __init__.py  area_of_use.py  area_of_use_deprecation_info.py  area_of_use_essence.py  area_of_use_essence_impl.py  area_of_use_request.py  area_of_use_results.py  authority_code.py  base_crs.py  catalog.py  catalog_attributes.py  compound_crs.py  compound_crs_essence.py  compound_crs_essence_impl.py  compound_crs_request.py  compound_crs_results.py  compound_ct.py  compound_ct_essence.py  compound_ct_essence_impl.py  compound_ct_request.py  compound_ct_results.py  coordinate_reference_systems_query.py  coordinate_transformations_query.py  crs.py  crs_deprecation_info.py  crs_essence.py  crs_essence_impl.py  crs_request.py  crs_results.py  ct.py  ct_deprecation_info.py  ct_essence.py  ct_essence_impl.py  ct_request.py  ct_results.py  cursor_query_response.py  cursor_query_response_results_item.py  datum.py  deprecation_info.py  early_bound_crs.py  (+26 more)
src/osdu_python_client/crs_conversion/: __init__.py
src/osdu_python_client/crs_conversion/models/: __init__.py  point.py  (+36 more)
src/osdu_python_client/dataset/: __init__.py
src/osdu_python_client/entitlements/: __init__.py
src/osdu_python_client/indexer/: __init__.py
src/osdu_python_client/ingestion_workflow_service/: __init__.py
src/osdu_python_client/legal/: __init__.py
src/osdu_python_client/notification/: __init__.py
src/osdu_python_client/partition/: __init__.py
src/osdu_python_client/policy/: __init__.py
src/osdu_python_client/register/: __init__.py
src/osdu_python_client/schema/: __init__.py
src/osdu_python_client/search/: __init__.py
src/osdu_python_client/storage/: __init__.py
src/osdu_python_client/unit/: __init__.py
tests/: __init__.py  auth.py  auth_fixture.py  config.py  conftest.py  entitlements_test.py  search_test.py
(+486 files in other folders)
