[project]
name = "osdu-python-client"
version = "0.3.3"
description = "Python client for OSDU services"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
authors = [
    {name = "OSDU team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

dependencies = [
    "attrs>=26.1.0",
    "httpx>=0.28.1",
    "openapi-python-client>=0.28.3",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "ruff>=0.15.12",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-mock==3.15.1",
    "pydantic-settings==2.14.0",
    "msal==1.36.0",
]

[build-system]
requires = ["setuptools", "wheel", "openapi-python-client>=0.28.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
managed = true
